# Phishguard-INF1002-LAB-P6-5

./: .gitignore  README.md  pyproject.toml
config/: config.json
src/phishguard.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
src/phishguard/app/: detector_engine.py  results_display.py  ui.py
src/phishguard/cli/: __init__.py  main(copy).py  main.py
src/phishguard/config/: __init__.py
src/phishguard/features/: __init__.py  extractors.py
src/phishguard/ingestion/: __init__.py  loaders.py
src/phishguard/normalize/: __init__.py  parse_mime.py
src/phishguard/pipeline/: __init__.py  evaluate.py
src/phishguard/reporting/: __init__.py  writers.py
src/phishguard/rules/: __init__.py  attachments.py  auth_results.py  display_impersonation.py  headers.py  html_heuristics.py  keywords.py  lookalike_domain(old).py  lookalike_domain.py  obfuscation.py  replyto.py  url_redflags.py  utils.py  whitelist.py
src/phishguard/schema/: __init__.py  classes.py
src/phishguard/scoring/: __init__.py  aggregate(old).py  aggregate.py
src/phishguard/storage/: __init__.py  storage.py
tests/: test_A_ingestion.py  test_B_normalize.py  test_C_features.py  test_D_scoring.py  test_E_reporting.py  test_F_storage.py  test_rule_headers.py  test_rule_keyword_positioning.py  test_rule_lookalike_domain.py  test_rule_url_redflags.py
tests/Demo/: test_features.py  test_ingestion.py  test_normalisation.py  test_rule_headers.py  test_rule_keyword.py  test_rule_whitelist.py
tests/output/: auto_results.csv  auto_results.json  sample_results.json
